@@ -1,3 +1,8 @@
+2004-11-24  Derek Price  <derek@ximbiot.com>
+
+	* server.c (become_proxy): Note assumptions about syncronized primary
+	and secondary versions with `FIXME?' note.
+
 2004-11-22  Mark D. Baushke  <mdb@cvshome.org>
 
 	* sanity.sh (info): Ignore comments in verifymsg test.
